--- a/review.html
+++ b/review.html
@@ -9,6 +9,30 @@
 
 <h2> <a href="https://www.bluehost.com/">Blue Host</a></h2>
 <ul>
-<li> I chose the site because it is extremely useful for creating things 
+<li>Has everything you need as a beginner</li>
+<li>Starts at only $2.95</li>
+<li>They have 24 hour support for help</li>
+<li>Multiple subscription options</li>
+</ul>
+
+
+  <h3> <a href="https://www.godaddy.com/offers/brand/new?isc=gofx2001a&cdtl=c_3497326.g_195482116.k_kwd-315217456.a_500417050228.d_c&gclid=CjwKCAiA3L6PBhBvEiwAINlJ9Oh6qqgRzlZJQ6zu4sokStnNvZcx8I0p11aKm6-hnNpvLjfI2XqDzxoCfdgQAvD_BwE">Godaddy</a></h3>
+  <ul>
+  <li>They offer large amounts of web storage</li>
+  <li>Very cost friendly $0.99-$14.99</li>
+  <li>Modern technology</li>
+  <li>Very popular and has good reviews</li>
+</ul>
+
+<h4> <a href="https://www.sitebuilder.com/">sitebuilder</a></h4>
+<ul>
+  <li>Offers many features that make your website have that WOW factor</li>
+  <li>Extremely easy to use</li>
+  <li>Very affordable $7.18-$11.18</li>
+  <li>Have multiple plan options</li>
+</ul>
+
+ <p>As a beginner I would pick Godaddy because it is the most common and offers similar offers to all of the other sites.</p>
+
   </body>
 </html>
