--- a/explore.html
+++ b/explore.html
@@ -59,8 +59,8 @@
     </figure>
 
     <figure>
-    <div class="zion">
-    <img src="zion.jpg" alt="Zion National Park">
+      <div class="zion"
+      <img src="zion.jpg" alt="Zion National Park">
     <figcaption> Zion National Park</figcaption>
     </div>
     </figure>
