--- a/explore.html
+++ b/explore.html
@@ -9,7 +9,7 @@
     <div id="wrap">
 
   <header>
-  <div id="logo"> <<img src="logos.png" alt="Explore">  </div>
+  <div id="logo"> <img src="logos.png" alt="Explore">  </div>
 
 <nav>
   <ul>
