--- a/explore.html
+++ b/explore.html
@@ -23,10 +23,11 @@
 
 <section class="welcome">
   <article>
-    <h1>Go Explore</h1>
+    <h1>Go Explore!</h1>
     <h2>Choose a National Park below:</h2>
+
     <figure>
-      <div class="arches"> <<img src="arches.jpg" alt="Arches National Park">
+     <img src="arches.jpg" alt="Arches National Park">
     <figcaption> Arches National Park</figcaption>
     </figure>
 
@@ -38,31 +39,23 @@
     </figure>
 
     <figure>
-    <div class="tenton">
     <img src="tenton.jpg" alt="Tentons">
     <figcaption> Tenton National Park</figcaption>
-    </div>
     </figure>
 
     <figure>
-    <div class="yellowstone">
     <img src="yellowstone.jpg" alt="Yellowstone Nation Park">
     <figcaption> Yellowstone National Park</figcaption>
-    </div>
     </figure>
 
     <figure>
-    <div class="yosemite">
     <img src="yosemite.jpg" alt="Yosemite National Park">
     <figcaption> Yosemite National Park</figcaption>
-    </div>
     </figure>
 
     <figure>
-      <div class="zion"
       <img src="zion.jpg" alt="Zion National Park">
     <figcaption> Zion National Park</figcaption>
-    </div>
     </figure>
 
   </article>
