--- a/photoshop.html
+++ b/photoshop.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <img src="flying.jpg" alt="Squirrel">
-    <img src="tommyfish.jpg" alt="Fish">
-    <img src="tommy.jpg" alt="Tommy">
-    <img src="bigfootoriginal.jpg" alt="">
+    <img src="flying.jpg" alt="Squirrel" width="600">
+    <img src="tommyfish.jpg" alt="Fish" width="600">
+    <img src="tommy.jpg" alt="Tommy" width="600">
+    <img src="bigfootoriginal.jpg" alt="" width="600">
     <title></title>
   </head>
   <body>
