--- a/summer.html
+++ b/summer.html
@@ -14,7 +14,7 @@
     </header>
       <nav>
         <ul>
-          <li><a href="media.html">Home</a></li>
+          <li><a href="seasons.html">Home</a></li>
           <li><a href="spring.html">Spring</a></li>
           <li><a href="summer.html">Summer</a></li>
           <li><a href="autumn.html">Autumn</a></li>
